--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>myroslavpidkuyko.github.io</title>
+  <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <title>Myroslav Pidkuyko</title>
 </head>
 <body>
 <h1>Hello World</h1>
