--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
    <title>Myroslav Pidkuyko</title>
 </head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<table>
+   <tr>
+      <td>
+         Content of the first column.
+      </td>
+      <td>
+         Content of the second column.
+      </td>
+   </tr>
+</table>
 </body>
 </html>
