--- a/index.html
+++ b/index.html
@@ -6,15 +6,9 @@
    <title>Myroslav Pidkuyko</title>
 </head>
 <body>
-<table>
-   <tr>
-      <td>
-         Content of the first column.
-      </td>
-      <td>
-         Content of the second column.
-      </td>
-   </tr>
-</table>
+<div id="container">
+  <div id="content">Content here</div>
+  <div id="navbar">Navigation</div>
+</div>
 </body>
 </html>
