--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
    <title>Myroslav Pidkuyko</title>
 </head>
 <body>
-<div id="container">
-  <div id="content">Content here</div>
-  <div id="navbar">Navigation</div>
+<div style="float: left; width: 50%;">
+Welcome to my website. I am a Research Economist at the DG Economics, Statistics and Research (Microeconomic Studies Division) at Banco de España.
+I received my PhD in Economics from The University of Manchester in 2019. 
+My research interests are in Macroeconomics, Household Finance, Asset Pricing, and Family Economics. 
+</div>
+<div style="float: right; width: 50%;">
+
 </div>
 </body>
 </html>
