--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ I received my PhD in Economics from The University of Manchester in 2019.
 My research interests are in Macroeconomics, Household Finance, Asset Pricing, and Family Economics. 
 </div>
 <div style="float: right; width: 50%;">
-
+  <img src="DSC_1683_2.jpg" alt="Myroslav Pidkuyko">
 </div>
 </body>
 </html>
