--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
 <body>
   <h1>Home</h1>
 <div style="float: left; width: 50%;">
+<p style="font-family: times, serif; font-size:14pt; font-style:italic">
 Welcome to my website. I am a Research Economist at the DG Economics, Statistics and Research (Microeconomic Studies Division) at Banco de España.
-I received my PhD in Economics from The University of Manchester in 2019. 
-My research interests are in Macroeconomics, Household Finance, Asset Pricing, and Family Economics. 
+ </p>
+
+<p style="font-family: times, serif; font-size:14pt; font-style:italic">
+  I received my PhD in Economics from The University of Manchester in 2019. 
+ </p>
+
+<p style="font-family: times, serif; font-size:14pt; font-style:italic">
+  My research interests are in Macroeconomics, Household Finance, Asset Pricing, and Family Economics. 
+ </p>
 </div>
 <div style="float: right; width: 50%;">
   <img src="DSC_1683_2.jpg" alt="Myroslav Pidkuyko">
