--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 <body>
   <h1>Home</h1>
 <div style="float: left; width: 50%;">
-<p style="font-family: times, serif; font-size:14pt; font-style:italic">
+
+  <p style="font-family: times, serif; font-size:14pt">
 Welcome to my website. I am a Research Economist at the DG Economics, Statistics and Research (Microeconomic Studies Division) at Banco de España.
  </p>
 
-<p style="font-family: times, serif; font-size:14pt; font-style:italic">
+<p style="font-family: times, serif; font-size:14pt">
   I received my PhD in Economics from The University of Manchester in 2019. 
  </p>
 
-<p style="font-family: times, serif; font-size:14pt; font-style:italic">
+<p style="font-family: times, serif; font-size:14pt">
   My research interests are in Macroeconomics, Household Finance, Asset Pricing, and Family Economics. 
  </p>
 </div>
