--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <title>Myroslav Pidkuyko</title>
 </head>
 <body>
-  <h1>Home</h1>
+  <h1 style="font-family:sans-serif;text-align:center;">Home</h1>
 <div style="float: left; width: 50%;">
 
   <p style="font-family: sans-serif ; font-size:14pt">
