--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <div style="float: left; width: 50%;">
 
   <p style="font-family: sans-serif ; font-size:14pt">
-Welcome to my website. I am a Research Economist at the DG Economics, Statistics and Research (Microeconomic Studies Division) at Banco de España.
+Welcome to my website. I am a Research Economist at the <a href="https://www.bde.es/investigador/en/">DG Economics, Statistics and Research</a> (Microeconomic Studies Division) at <a href="https://www.bde.es/bde/en/">Banco de España</a>.
  </p>
 
 <p style="font-family: sans-serif ; font-size:14pt">
-  I received my PhD in Economics from The University of Manchester in 2019. 
+  I received my PhD in Economics from <a href="https://www.manchester.ac.uk/">The University of Manchester</a> in 2019. 
  </p>
 
 <p style="font-family: sans-serif ; font-size:14pt">
