--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Welcome to my website. I am a Research Economist at the <a href="https://www.bde
  </p>
 </div>
 <div style="float: right; width: 50%;">
-  <img src="DSC_1683_2.jpg" alt="Myroslav Pidkuyko">
+  <img src="DSC_1683_2.jpg" alt="Myroslav Pidkuyko" style="width:436px;height:573px;">
 </div>
 </body>
 </html>
