--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
 </head>
 <body>
   <h1 style="font-family:sans-serif;text-align:center;">Home</h1>
-<div style="float: left; width: 50%;">
+<div style="float: left; width: 60%;">
 
-  <p style="font-family: sans-serif ; font-size:12pt">
+  <p style="font-family: sans-serif ; font-size:12pt; style="text-align:justify;">
 Welcome to my website. I am a Research Economist at the <a href="https://www.bde.es/investigador/en/">DG Economics, Statistics and Research</a> (Microeconomic Studies Division) at <a href="https://www.bde.es/bde/en/">Banco de España</a>.
  </p>
 
-<p style="font-family: sans-serif ; font-size:12pt">
+<p style="font-family: sans-serif ; font-size:12pt; style="text-align:justify;">
   I received my PhD in Economics from <a href="https://www.manchester.ac.uk/">The University of Manchester</a> in 2019. 
  </p>
 
-<p style="font-family: sans-serif ; font-size:12pt">
+<p style="font-family: sans-serif ; font-size:12pt; style="text-align:justify;">
   My research interests are in Macroeconomics, Household Finance, Asset Pricing, and Family Economics. 
  </p>
 </div>
-<div style="float: right; width: 50%;">
+<div style="float: right; width: 40%;">
   <img src="DSC_1683_2.jpg" alt="Myroslav Pidkuyko" style="width:436px;height:573px;">
 </div>
 </body>
