--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body {
 
 .topnav {
   overflow: hidden;
-  background-color: #333;
+  background-color: #FFFFFF;
 }
 
 .topnav a {
@@ -27,7 +27,7 @@ body {
 }
 
 .topnav a:hover {
-  background-color: #ddd;
+  background-color: #556B2F;
   color: black;
 }
 
