--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@ body {
 <body>
   
   <div class="topnav" id="myTopnav">
-  <a href="#home" class="active">Home</a>
-  <a href="#news">News</a>
+  <a href="index.html" class="active">Home</a>
+  <a href="research.html">Research</a>
   <a href="#contact">Contact</a>
   <a href="#about">About</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
