--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@ body {
 }
 
 .topnav a.active {
-  background-color: #4CAF50;
-  color: white;
+  background-color: #b35c48;
+  color: black;
 }
 
 .topnav .icon {
@@ -68,8 +68,11 @@ body {
   <div class="topnav" id="myTopnav">
   <a href="index.html" class="active">Home</a>
   <a href="research.html">Research</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
+  <a href="cv.html">CV</a>
+  <a href="teaching.html">Teaching</a>
+  <a href="codes.html">Codes</a>
+  <a href="contact.html">Contact</a>
+  <a href="links.html">Links</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
