--- a/links.html
+++ b/links.html
@@ -78,7 +78,7 @@ body {
   </a>
 </div>
   
-  <h1 style="font-family:sans-serif;text-align:center;">Research</h1>
+  <h1 style="font-family:sans-serif;text-align:center;color=#b35c48">Links</h1>
   
   
 
