--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ body {
   </a>
 </div>
   
-  <h1 style="font-family:sans-serif;text-align:center;">Home</h1>
+  <h1 style="font-family:sans-serif;text-align:center;color:#b35c48">Home</h1>
   
   
   <div style="float: left; width: 10%;">
