--- a/index.html
+++ b/index.html
@@ -127,6 +127,22 @@ body {
   
   <h1 style="font-family:sans-serif;text-align:center;color:#b35c48">Home</h1>
   
+<div class="row">
+  <div class="col-3 col-s-3 menu">
+    <p style="font-family: sans-serif ; font-size:12pt; style="text-align:justify;">
+      Welcome to my website. I am a Research Economist at the <a href="https://www.bde.es/investigador/en/">DG Economics, Statistics and Research</a> (Microeconomic Studies Division) at <a href="https://www.bde.es/bde/en/">Banco de España</a>.
+    </p>
+
+    <p style="font-family: sans-serif ; font-size:12pt; style="text-align:justify;">
+      I received my PhD in Economics from <a href="https://www.manchester.ac.uk/">The University of Manchester</a> in 2019. 
+    </p>
+
+    <p style="font-family: sans-serif ; font-size:12pt; style="text-align:justify;">
+      My research interests are in Macroeconomics, Household Finance, Asset Pricing, and Family Economics. 
+    </p>
+  </div>
+</div>
+  
   
   <div style="float: left; width: 20%;">
     </div>
