--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ body {
   <h1 style="font-family:sans-serif;text-align:center;color:#b35c48">Home</h1>
   
 <div class="row">
-  <div class="col-3 col-s-3 menu">
+  <div class="col-6 col-s-6 text">
     <p style="font-family: sans-serif ; font-size:12pt; style="text-align:justify;">
       Welcome to my website. I am a Research Economist at the <a href="https://www.bde.es/investigador/en/">DG Economics, Statistics and Research</a> (Microeconomic Studies Division) at <a href="https://www.bde.es/bde/en/">Banco de España</a>.
     </p>
@@ -140,6 +140,10 @@ body {
     <p style="font-family: sans-serif ; font-size:12pt; style="text-align:justify;">
       My research interests are in Macroeconomics, Household Finance, Asset Pricing, and Family Economics. 
     </p>
+  </div>
+                                                                                   
+  <div class="col-6 col-s-6 text">
+    <img src="DSC_1683_2.jpg" alt="Myroslav Pidkuyko" style="width:305px;height:401px;">
   </div>
 </div>
   
