--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ body {
   </div>
                                                                                    
   <div class="col-10 col-s-10">
-    <img src="DSC_1683_2.jpg" alt="Myroslav Pidkuyko" style="width:305px;height:401px;">
+    <img src="DSC_1683_2.jpg" alt="Myroslav Pidkuyko">
   </div>
 </div>
   
