--- a/index.html
+++ b/index.html
@@ -108,6 +108,25 @@ body {
   .col-11 {width: 91.66%;}
   .col-12 {width: 100%;}
 }
+  
+.responsive {
+  padding: 0 6px;
+  float: left;
+  width: 24.99999%;
+}
+
+@media only screen and (max-width: 768px) {
+  .responsive {
+    width: 49.99999%;
+    margin: 6px 0;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .responsive {
+    width: 100%;
+  }
+}
 </style>
 </head>
 <body>
@@ -128,7 +147,7 @@ body {
   <h1 style="font-family:sans-serif;text-align:center;color:#b35c48">Home</h1>
   
 <div class="row">
-  <div class="col-4 col-s-4">
+  <div class="col-6 col-s-6">
     <p style="font-family: sans-serif ; font-size:12pt; style="text-align:justify;">
       Welcome to my website. I am a Research Economist at the <a href="https://www.bde.es/investigador/en/">DG Economics, Statistics and Research</a> (Microeconomic Studies Division) at <a href="https://www.bde.es/bde/en/">Banco de España</a>.
     </p>
@@ -142,8 +161,10 @@ body {
     </p>
   </div>
                                                                                    
-  <div class="col-10 col-s-10">
-    <img src="DSC_1683_2.jpg" alt="Myroslav Pidkuyko">
+  <div class="col-6 col-s-6">
+    <div class = "responsive">
+      <img src="DSC_1683_2.jpg" alt="Myroslav Pidkuyko">
+    </div>
   </div>
 </div>
   
