--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@ body {
     width: 100%;
   }
 }
+  
+img {
+  width: 100%;
+}
 </style>
 </head>
 <body>
@@ -162,9 +166,7 @@ body {
   </div>
                                                                                    
   <div class="col-6 col-s-6">
-    <div class = "responsive">
       <img src="DSC_1683_2.jpg" alt="Myroslav Pidkuyko">
-    </div>
   </div>
 </div>
   
