--- a/index.html
+++ b/index.html
@@ -109,29 +109,8 @@ body {
   .col-12 {width: 100%;}
 }
   
-.responsive {
-  padding: 0 6px;
-  float: left;
-  width: 24.99999%;
-}
-
-@media only screen and (max-width: 768px) {
-  .responsive {
-    width: 49.99999%;
-    margin: 6px 0;
-  }
-}
-
-@media only screen and (max-width: 500px) {
-  .responsive {
-    width: 100%;
-  }
-}
   
-img {
-  width: 100%;
-  height: auto;
-}
+
 </style>
 </head>
 <body>
@@ -167,7 +146,7 @@ img {
   </div>
                                                                                    
   <div class="col-6 col-s-6">
-      <img src="DSC_1683_2.jpg" alt="Myroslav Pidkuyko">
+      <img src="DSC_1683_2.jpg" alt="Myroslav Pidkuyko" style="width:100%">
   </div>
 </div>
   
