--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ body {
     </p>
   </div>
   <div class="col-6 col-s-6">
-      <img src="DSC_1683_2.jpg" alt="Myroslav Pidkuyko" style="width:100%">
+      <img src="DSC_1683_2.jpg" alt="Myroslav Pidkuyko" style="width:50%; height=auto;">
   </div>
 </div>
   
