--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@ body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
-
+  
+* {
+  box-sizing: border-box;
+}
 .row::after {
   content: "";
   clear: both;
