--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
   
+a:link {
+  color: #b35c48;
+}
+  
 * {
   box-sizing: border-box;
 }
