--- a/index.html
+++ b/index.html
@@ -137,17 +137,17 @@ a:link {
   </a>
 </div>
   
-  <h1 style="font-family:"Helvetica Neue", Helvetica, Arial, sans-serif;text-align:center;color:#b35c48">Home</h1>
+  <h1 style="text-align:center;color:#b35c48">Home</h1>
   
 <div class="row">
   <div class="col-8 col-s-8">
-    <p style="font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size:12pt; style="text-align:justify;">
+    <p style="font-size:12pt; style="text-align:justify;">
       Welcome to my website. I am a Research Economist at the <a href="https://www.bde.es/investigador/en/">DG Economics, Statistics and Research</a> (Microeconomic Studies Division) at <a href="https://www.bde.es/bde/en/">Banco de España</a>.
     </p>
-    <p style="font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size:12pt; style="text-align:justify;">
+    <p style="font-size:12pt; style="text-align:justify;">
       I received my PhD in Economics from <a href="https://www.manchester.ac.uk/">The University of Manchester</a> in 2019. 
     </p>
-    <p style="font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size:12pt; style="text-align:justify;">
+    <p style="font-size:12pt; style="text-align:justify;">
       My research interests are in Macroeconomics, Household Finance, Asset Pricing, and Family Economics. 
     </p>
   </div>
