--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@ a:link {
   color: #b35c48;
 }
 
+ 
+.gap-10 {
+				width:100%;
+				height:10px;
+			}
+.gap-20 {
+				width:100%;
+				height:20px;
+			}
+  
+.gap-30 {
+				width:100%;
+				height:30px;
+			}
   
 * {
   box-sizing: border-box;
@@ -138,6 +152,8 @@ a:link {
 </div>
   
   <h1 style="text-align:center;color:#b35c48">Home</h1>
+ 
+<div class="gap-20"></div>
   
 <div class="row">
   <div class="col-8 col-s-8">
