--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <style>
 body {
   margin: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 }
   
 a:link {
@@ -32,7 +32,7 @@ a:link {
   
 * {
   box-sizing: border-box;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 }
 .row::after {
   content: "";
