--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@ a:link {
 
  
 .gap-10 {
-				width:100%;
-				height:10px;
-			}
+		width:100%;
+		height:10px;
+	}
 .gap-20 {
-				width:100%;
-				height:20px;
-			}
+		width:100%;
+		height:20px;
+	}
   
 .gap-30 {
-				width:100%;
-				height:30px;
-			}
+		width:100%;
+		height:30px;
+	}
   
 * {
   box-sizing: border-box;
@@ -53,7 +53,7 @@ a:link {
 .topnav a {
   float: left;
   display: block;
-  color: #f2f2f2;
+  color: #9B9B9B;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
