--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@ a:link {
     
 .topnav {
   overflow: hidden;
-  background-color: #FFFFFF;
+  background-color: black;
 }
 
 .topnav a {
   float: left;
   display: block;
-  color: #9B9B9B;
+  color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
