--- a/cv.html
+++ b/cv.html
@@ -8,18 +8,18 @@
   <style>
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 }
 
 .topnav {
   overflow: hidden;
-  background-color: #FFFFFF;
+  background-color: black;
 }
 
 .topnav a {
   float: left;
   display: block;
-  color: #f2f2f2;
+  color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
