--- a/cv.html
+++ b/cv.html
@@ -78,7 +78,7 @@ body {
   </a>
 </div>
   
-  <h1 style="font-family:sans-serif;text-align:center;color:#b35c48">CV</h1>
+  <h1 style="text-align:center;color:#b35c48">CV</h1>
   
   
 
