--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@ a:link {
 <body>
   
   <div class="topnav" id="myTopnav">
+  <a href="">Myroslav Pidkuyko</a>
   <a href="index.html" class="active">Home</a>
   <a href="research.html">Research</a>
   <a href="cv.html">CV</a>
