--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@ a:link {
   background-color: #b35c48;
   color: black;
 }
+
+.topnav a.nonactive {
+  background-color: white;
+  color: black;
+}
+	
+	
 .topnav .icon {
   display: none;
 }
@@ -134,7 +141,7 @@ a:link {
 <body>
   
 <div class="topnav" id="myTopnav">
-  <a href="">Myroslav Pidkuyko</a>
+  <a href="" class="nonactive">Myroslav Pidkuyko</a>
   <a href="index.html" class="active">Home</a>
   <a href="research.html">Research</a>
   <a href="cv.html">CV</a>
