--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@ a:link {
   color: black;
 }
 	
+.topnav .logo { 
+	position: absolute; 
+	z-index:1; 
+	top:0; 
+}
 	
 .topnav .icon {
   display: none;
@@ -141,6 +146,7 @@ a:link {
 <body>
   
 <div class="topnav" id="myTopnav">
+  <a href="" class="logo" style="z-index:1;position:absolute;"><img src="Logo_Banco_de_España.jpg"></a>
   <a href="" class="nonactive">Myroslav Pidkuyko</a>
   <a href="index.html" class="active">Home</a>
   <a href="research.html">Research</a>
