--- a/index.html
+++ b/index.html
@@ -147,8 +147,7 @@ a:link {
 <body>
   
 <div class="topnav" id="myTopnav">
-  <a href="" class="nonactive"><img src="Logo_Banco_de_España.jpg"></a>
-  <a href="" class="nonactive">Myroslav Pidkuyko</a>
+  <a href="" class="nonactive"><img src="Logo_Banco_de_España.jpg" style="height:80%; width=auto;">Myroslav Pidkuyko</a>
   <a href="index.html" class="active">Home</a>
   <a href="research.html">Research</a>
   <a href="cv.html">CV</a>
@@ -180,7 +179,7 @@ a:link {
     </p>
   </div>
   <div class="col-4 col-s-4">
-      <img src="DSC_1683_2.jpg" alt="Myroslav Pidkuyko" style="height:80%; width=auto;">
+      <img src="DSC_1683_2.jpg" alt="Myroslav Pidkuyko" style="height:45px; width=auto;">
   </div>
 </div>
   
