--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ a:link {
 <body>
   
 <div class="topnav" id="myTopnav">
-  <a href="" class="nonactive"><img src="Logo_Banco_de_España.jpg" style="height:80%; width=auto;">Myroslav Pidkuyko</a>
+  <a href="" class="nonactive"><img src="Logo_Banco_de_España.jpg" style="height:45px; width=auto;">Myroslav Pidkuyko</a>
   <a href="index.html" class="active">Home</a>
   <a href="research.html">Research</a>
   <a href="cv.html">CV</a>
