--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ a:link {
     </p>
   </div>
   <div class="col-4 col-s-4">
-      <img src="DSC_1683_2.jpg" alt="Myroslav Pidkuyko" style="height:45px; width=auto;">
+      <img src="DSC_1683_2.jpg" alt="Myroslav Pidkuyko" style="height:80%; width=auto;">
   </div>
 </div>
   
