--- a/cv.html
+++ b/cv.html
@@ -164,7 +164,9 @@ a:link {
 	
 <h1 style="text-align:center;color:#b35c48">Curriculum Vitae</h1>
  
-                                                                                     
+<div class="gap-20"></div>	
+	
+<iframe src="MyroslavPidkuyko_CV.pdf" width="100%" height="500px">                                                                                     
                                                                                      
 <script>
 function myFunction() {
