--- a/cv.html
+++ b/cv.html
@@ -167,7 +167,8 @@ a:link {
 <div class="gap-20"></div>	
 	
 <iframe src="MyroslavPidkuyko_CV.pdf" width="100%" height="500px">                                                                                     
-                                                                                     
+</iframe>
+                                                                                   
 <script>
 function myFunction() {
   var x = document.getElementById("myTopnav");
