--- a/codes.html
+++ b/codes.html
@@ -174,10 +174,16 @@ a:link {
  
 <div class="gap-20"></div>
   
-<p onclick="myFunction()">Try it</p>
+<p onclick="myFunction2()">CEX Stata Codes</p>
 
-<div id="myDIV">
-This is my DIV element.
+<div id="myDIV" style="display:none">
+These Stata files (dictionaries) were created to make access to the 1980 - 1995 waves of BLS Consumer Expenditure Survey data more straightforward and easy. 
+The corresponding data files are available at <a href="https://www.icpsr.umich.edu/icpsrweb/">ICPSR</a>. 
+	
+<div class="gap-20"></div>
+ 
+Available at <a href="https://github.com/myroslavpidkuyko/cex-dictionary.git">https://github.com/myroslavpidkuyko/cex-dictionary.git</a>
+	
 </div>
   
   
