--- a/codes.html
+++ b/codes.html
@@ -149,6 +149,22 @@ a:link {
   background-color: white;
   margin-top: 20px;
 }
+	
+	
+.button {
+  background-color: #b35c48;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+	
+	
 </style>
 </head>
 
@@ -173,8 +189,8 @@ a:link {
 <h1 style="text-align:center;color:#b35c48">Codes</h1>
  
 <div class="gap-20"></div>
-  
-<p onclick="myFunction2()">CEX Stata Codes</p>
+	
+<button class="button" onclick="myFunction2()">CEX Stata Codes</button>
 
 <div id="myDIV" style="display:none">
 These Stata files (dictionaries) were created to make access to the 1980 - 1995 waves of BLS Consumer Expenditure Survey data more straightforward and easy. 
