--- a/codes.html
+++ b/codes.html
@@ -175,7 +175,11 @@ a:link {
   background-color: #b35c48;
   color: white;
 }
-	
+
+.disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+}
 	
 </style>
 </head>
@@ -214,7 +218,10 @@ Available at <a href="https://github.com/myroslavpidkuyko/cex-dictionary.git">ht
 	
 </div>
   
-  
+<div class="gap-20"></div>
+
+<button class="button disabled" onclick="myFunction2()">SCF Stata Codes</button>
+
  
                                                                                      
                                                                                      
