--- a/codes.html
+++ b/codes.html
@@ -228,7 +228,7 @@ Available at <a href="https://github.com/myroslavpidkuyko/cex-dictionary.git">ht
   
 <div class="gap-20"></div>
 
-<button class="button disabled" onclick="myFunction3()">SCF Stata Codes</button>
+<button class="button disabled">SCF Stata Codes</button>
 
  
                                                                                      
