--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ a:link {
 <div class="row">
   <div class="col-8 col-s-8">
     <p style="font-size:12pt; style="text-align:justify;">
-      Welcome to my website. I am a Research Economist at the <a href="https://www.bde.es/investigador/en/">DG Economics, Statistics and Research</a> (Microeconomic Studies Division) at <a href="https://www.bde.es/bde/en/">Banco de España</a>.
+      Welcome to my website. I am a Research Economist at the <a href="https://www.bde.es/investigador/en/">DG Economics, Statistics and Research</a> (Microeconomic Studies Division) at <a href="https://www.bde.es/bde/en/">Banco de España</a>. I am also a Honorary Research Fellow at the Economics Department at <a href="https://www.manchester.ac.uk/">The University of Manchester</a>.
     </p>
     <p style="font-size:12pt; style="text-align:justify;">
       I received my PhD in Economics from <a href="https://www.manchester.ac.uk/">The University of Manchester</a> in 2019. 
